// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AncienneteETAMIC /> asks to fill duration, indemnité and consideration 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7598d6;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c8 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c4 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c9 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c5 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c11 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c11::-webkit-outer-spin-button,
.c11::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c10 {
  position: relative;
  display: inline-block;
  margin-right: 1.6rem;
}

.c12 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c2 {
  margin-top: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Contrats antérieurs
  </h2>
  <p>
    Si le salarié a été auparavant employé par la même société et que la fin du / des contrat(s) n’est pas imputable à l’une des raisons suivantes :
  </p>
  <ul>
    <li>
      démission
    </li>
    <li>
      licenciement pour faute grave ou faute lourde
    </li>
  </ul>
  <p>
    alors
     
    <strong>
      la durée de ce(s) contrat(s) s’ajoute à votre ancienneté
    </strong>
    .
  </p>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Dans le cas de la démission, l’employeur peut accepter de prendre en compte la durée du contrat de travail correspondant pour l’appréciation de l’ancienneté.
    </div>
  </div>
  <p
    class="c4"
  >
    Avez-vous un/des contrat(s) antérieur(s) à déclarer ?
    <span
      aria-label="champs obligatoire"
      class="c5"
    >
      *
    </span>
  </p>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      <input
        checked=""
        name="hasBrancheContrat"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c7"
    >
      <input
        name="hasBrancheContrat"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c7"
    for="duration"
  >
    Durée des contrats de travail précédents (en mois)
  </label>
  <input
    class="c8"
    id="duration"
    name="brancheContrat.duration"
    type="number"
    value="3"
  />
  <div
    class="c1 c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Il est important de préciser l’indemnité de licenciement éventuellement perçue lors d’un précédent licenciement dans la même entreprise. L’employeur actuel peut la déduire de l’indemnité de licenciement en train d’être calculée.
    </div>
  </div>
  <label
    class="c9"
    for="currency-1"
  >
    Indemnité de licenciement précédemment perçue
  </label>
  <div
    class="c10"
  >
    <input
      class="c11"
      id="currency-1"
      name="brancheContrat.indemnite"
      type="number"
      value="0"
    />
    <span
      aria-hidden="true"
      class="c12"
    >
      €
    </span>
  </div>
  <p
    class="c4"
  >
    Souhaitez vous déduire cette indemnité ?
  </p>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      <input
        name="brancheContrat.considered"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c7"
    >
      <input
        checked=""
        name="brancheContrat.considered"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<AncienneteETAMIC /> renders 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-sizing: border-box;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7598d6;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  color: #3e486e;
  text-align: left;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c4 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c5 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
  font-weight: 700;
}

.c2 {
  margin-top: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Contrats antérieurs
  </h2>
  <p>
    Si le salarié a été auparavant employé par la même société et que la fin du / des contrat(s) n’est pas imputable à l’une des raisons suivantes :
  </p>
  <ul>
    <li>
      démission
    </li>
    <li>
      licenciement pour faute grave ou faute lourde
    </li>
  </ul>
  <p>
    alors
     
    <strong>
      la durée de ce(s) contrat(s) s’ajoute à votre ancienneté
    </strong>
    .
  </p>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Dans le cas de la démission, l’employeur peut accepter de prendre en compte la durée du contrat de travail correspondant pour l’appréciation de l’ancienneté.
    </div>
  </div>
  <p
    class="c4"
  >
    Avez-vous un/des contrat(s) antérieur(s) à déclarer ?
    <span
      aria-label="champs obligatoire"
      class="c5"
    >
      *
    </span>
  </p>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      <input
        name="hasBrancheContrat"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c7"
    >
      <input
        name="hasBrancheContrat"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;
